--- a/docker_node/package.json
+++ b/docker_node/package.json
@@ -11,6 +11,7 @@
   "author": "Chirag Saraswat",
   "license": "MIT",
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.14",
     "@types/node": "^18.11.14",
     "nodemon": "^2.0.20",
@@ -19,6 +20,7 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^6.8.0"
